chart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx-on-k8s
  namespace: nginx-on-k8s
spec:
  ports:
  - port: 80
  selector:
    app.kubernetes.io/name: app-nginx-on-k8s
  type: NodePort
