chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
  name: ingress-nginx-on-k8s
  namespace: nginx-on-k8s
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: service-nginx-on-k8s
            port:
              number: 80
        path: /
        pathType: Prefix
