chart/nginx-on-k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-on-k8s
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nginx-on-k8s
  name: deployment-nginx-on-k8s
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-nginx-on-k8s
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-nginx-on-k8s
    spec:
      containers:
        - image: 911140678545.dkr.ecr.eu-west-1.amazonaws.com/avm-k8s-testmf:latest
          imagePullPolicy: Always
          name: app-nginx-on-k8s
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "1"
apiVersion: v1
kind: Service
metadata:
  namespace: nginx-on-k8s
  name: service-nginx-on-k8s
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-nginx-on-k8s
kind: Service
metadata:
  namespace: nginx-on-k8s
  name: service-arm-on-k8s
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-arm-on-k8s              
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nginx-on-k8s
  name: ingress-nginx-on-k8s
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-nginx-on-k8s
                port:
                  number: 80
